force-app/main/default/objects/Agent_Areas__c/Agent_Areas__c.object-meta.xml
<CustomObject>
    <label>Agent Areas</label>
    <nameField>
        <displayFormat>AA-{0000}</displayFormat>
        <label>AA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>