force-app/main/default/objects/Agent_Areas__c/fields/Focuse__c.field-meta.xml
<CustomField>
    <fullName>Focuse__c</fullName>
    <label>Focus Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Sales_Leasing__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Downtown Dubai</fullName>
            </value>
            <value>
                <fullName>Palm Jumeirah</fullName>
            </value>
            <value>
                <fullName>Emirates Hills</fullName>
            </value>
            <value>
                <fullName>Jumeirah Beach Residence</fullName>
            </value>
            <value>
                <fullName>Jumeirah Golf Estate</fullName>
            </value>
            <value>
                <fullName>Al Barari</fullName>
            </value>
            <value>
                <fullName>MBR City</fullName>
            </value>
            <value>
                <fullName>DIFC</fullName>
            </value>
            <value>
                <fullName>Dubai Hills Estate</fullName>
            </value>
            <value>
                <fullName>Dubai Creek Harbour</fullName>
            </value>
            <value>
                <fullName>Dubai Harbour</fullName>
            </value>
            <value>
                <fullName>Jumeirah</fullName>
            </value>
            <value>
                <fullName>Umm Suqueim</fullName>
            </value>
            <value>
                <fullName>Jumeirah Park</fullName>
            </value>
            <value>
                <fullName>Jumeirah Islands</fullName>
            </value>
            <value>
                <fullName>Green Community</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>