force-app/main/default/objects/Agent_Areas__c/fields/Sales_Leasing__c.field-meta.xml
<CustomField>
    <fullName>Sales_Leasing__c</fullName>
    <label>Sales/Leasing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>